# CityBuilder_SFML

./: CMakeLists.txt  main.cc  vcpkg.json
api/: CMakeLists.txt
api/include/: empty.h
api/include/ai/: npc.h
api/include/graphics/: directions.h  map_generation.h  tilemap.h
api/include/motion/: motor.h  path.h
api/src/: empty.cc
api/src/ai/: npc.cc
api/src/graphics/: directions.cc  map_generation.cc  tilemap.cc
api/src/motion/: motor.cc  path.cc
core/: CMakeLists.txt
core/include/: basics.h  directions.h  game.h  map_generation.h
core/include/ai/: bt_action.h  bt_composite.h  bt_node.h  bt_selector.h  bt_sequence.h
core/include/assets/: asset_manager.h
core/include/maths/: angle.h  const.h  func.h  vec2.h  vec2f.h
core/src/: basics.cc  directions.cc  empty.cc  game.cc  map_generation.cc
core/src/ai/: bt_composite.cc  bt_selector.cc  bt_sequence.cc
core/test/: test_angle.cc  test_vec2.cc  test_vec2f.cc
game/: CMakeLists.txt
game/include/: game.h
game/src/: game.cc
